<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/login"
            android:background="@drawable/button_background"
            android:id="@+id/login_logining"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:id="@+id/login_register"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            android:text="游客登录"
            android:id="@+id/login_look"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:text="@string/otherlogin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/qq"
            android:id="@+id/login_qq"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/wechat"
            android:id="@+id/login_weichat"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/sinaweibo"
            android:id="@+id/login_sinaweibo"/>
    </LinearLayout>

</LinearLayout>
